<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oscar.proyectofinalmoviles.ActivityListar">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/EditLati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/latitud"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EditLongi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/longitud"
            android:inputType="textPersonName" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EditDescri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/descripci_n"
                android:inputType="textPersonName" />

        </ScrollView>

        <Button
            android:id="@+id/ButRegis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="RegistrarUbicacion"
            android:text="@string/registrar" />

        <Button
            android:id="@+id/ButIrMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultar_mapa" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TextListar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
